--- a/system_recommender/requirements.txt
+++ b/system_recommender/requirements.txt
@@ -1,14 +1,19 @@
+alembic==1.13.2
 blinker==1.8.2
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
 Flask==3.0.3
 Flask-Login==0.6.3
+Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+git-filter-repo==2.45.0
 greenlet==3.1.0
 idna==3.9
 itsdangerous==2.2.0
 Jinja2==3.1.4
+Mako==1.3.5
 MarkupSafe==2.1.5
 numpy==2.1.1
 pandas==2.2.2
@@ -21,3 +26,4 @@ typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.3
 Werkzeug==3.0.4
+WTForms==3.1.2
